// 这个就是protobuf的中间文件

// 指定的当前proto语法的版本，有2和3
syntax = "proto3";

// 使用any类型，需要导入这个
import "google/protobuf/any.proto";

//option go_package = "path;name"; path 表示生成的go文件的存放地址，会自动生成目录的；"."就是从当前目录开始生成下面的路径
// name 表示生成的go文件所属的包名
option go_package = ".;service";

// 指定等会文件生成出来的package(这个似乎不是生成文件里面的包名)
//package service;

// 定义request model
message ProductRequest {
  int32 prod_id = 1; //1代表顺序
  string prod_name = 2;
}

// 定义response model
message ProductResponse {
  int32 prod_stack = 1; //1代表顺序
  int32  prod_price = 2;
  google.protobuf.Any data = 3; // 使用any类型
}

// 定义服务主体
service ProductService {
  // 定义方法
  rpc GetProductStock(ProductRequest) returns (ProductResponse);
}

